--- a/templates/index.html
+++ b/templates/index.html
@@ -86,9 +86,7 @@
         </div>
         <div class="col-lg-7">
           <div class="about-descr">
-            I’m Peddamurthy Lavanya, a passionate UI/UX Designer based in Austin. I love creating clean, simple, and
-            unique designs that enhance user experiences. My skills extend beyond design—I also enjoy crafting brand
-            identities, icons, and illustrations.
+            I’m Peddamurthy Lavanya, a final-year B.Sc. (M.S.C.S) student at KBN College. I have a strong passion for technology, particularly in computer science.
             I have a strong foundation in C, Java, DBMS, Data Structures, OS, PHP, and HTML, along with proficiency in
             MS Office and Statistical Analysis. My goal is to continuously improve my skills and contribute innovative
             ideas while being mentored toward a successful career.
